	20100326 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h,
	BLDApp/src/devBLDMcastStatus.c: Removed little-endian copy of
	ebeamInfo as well as memcpy that initialized it.
	ebeamInfo is now maintained in LE format directly and we use
	(hopefully) more efficient ways to byteswap.

	* BLDApp/src/BLDMCast.c, BLDApp/src/Makefile: replaced hardcoded
	IP address of MC interface by 'getenv("IPADDR1")'. IPADDR1 can be set
	via fcomUtil so we added fcomUtil to the included dbds and libs.

	20100325 (Till Straumann):

	* BLDApp/src/BLDMCast.c: Removed 'ca_add_event' -- 'ca_add_array_event'
	works for a single element, too (and ca_add_event is just a macro mapping
	to the ca_add_array_event).

	Replaced per-PV 'dataAvailable' flag by a global bitset which can be
	tested more efficiently.

	Restructured some #ifdefs so that {} are always balanced (helps
	the editor).

	Replaced explicit pulse ID calculation by 'official' PULSEID() macro
	from event module.

	* BLDApp/src/BLDMCast.h: Replaced 'unsigned int' and 'double' by
	more portable epicsUInt32 / epicsFloat64.

	* BLDApp/src/devBLDMcastStatus.c: Removed pre-3.14 #ifdefed stuff.
	moved 'recGblSetSevr()' out of critical section. It may be cheap
	but that's not necessarily obvious to the reader.

	20100324 (Till Straumann):

	* BLDApp/src/BLDMCast.c: use c99 designated initializers to ensure
	that array entries match associated enums.

	20100323 (Till Straumann):

	* BLDApp/src/BLDMCast.c: removed inclusion of unnecessary headers.

	20100323 (Till Straumann):

	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h:
	Moved non-public declarations and in particular, definition of 'static' variables
	from BLDMCast.h -> BLDMCast.c.
	Silenced 'multiple definition of cpp symbols' warning by removing unnecessary
	inclusion of 'cadef.h' vs. 'dbAccess.h'

	20100323 (Till Straumann):

	* BLDApp/src/devBLDMCastStatus.c: removed unnecessary inclusion
	of headers.

	20100323 (Till Straumann): Added 'ChangeLog' file.